--- a/index.html
+++ b/index.html
@@ -45,191 +45,155 @@ function generateCV() {
   const { jsPDF } = window.jspdf;
   const doc = new jsPDF();
 
+  const pageWidth = doc.internal.pageSize.getWidth();
   let y = 20;
+
+  /* ===== COLORS ===== */
+  const primary = [41, 128, 185];   // Blue
+  const lightGray = [245, 247, 250];
+
+  /* ===== HEADER BACKGROUND ===== */
+  doc.setFillColor(...primary);
+  doc.rect(0, 0, pageWidth, 35, "F");
 
   /* ===== NAME ===== */
   doc.setFont("helvetica", "bold");
-  doc.setFontSize(18);
-  doc.text("Esha Ishfaq", 20, y);
-  y += 10;
+  doc.setFontSize(20);
+  doc.setTextColor(255, 255, 255);
+  doc.text("Esha Ishfaq", 20, 22);
 
-  /* ===== HEADLINE ===== */
+  doc.setFontSize(11);
+  doc.text(
+    "BS Information Technology Graduate | IT & Computer Skills Professional",
+    20,
+    30
+  );
+
+  y = 45;
+  doc.setTextColor(0, 0, 0);
+
+  /* ===== SECTION TITLE FUNCTION ===== */
+  function sectionTitle(title) {
+    doc.setFillColor(...lightGray);
+    doc.rect(15, y - 6, pageWidth - 30, 10, "F");
+    doc.setFont("helvetica", "bold");
+    doc.setFontSize(13);
+    doc.text(title, 20, y);
+    y += 10;
+  }
+
+  /* ===== PROFESSIONAL SUMMARY ===== */
+  sectionTitle("Professional Summary");
   doc.setFont("helvetica", "normal");
-  doc.setFontSize(12);
-  const headline = "BS Information Technology Graduate | Lead Generation & Data Entry Executive | Computer & IT Skills Professional";
-  doc.text(doc.splitTextToSize(headline, 170), 20, y);
-  y += 15;
+  doc.setFontSize(11);
 
-  /* ===== ABOUT ME ===== */
-  doc.setFont("helvetica", "bold");
-  doc.setFontSize(14);
-  doc.text("Professional Summary", 20, y);
-  y += 6;
+  const summary =
+    "A dedicated and goal-oriented BS Information Technology graduate with strong computer and IT skills. Experienced in lead generation, online research, data entry, and record management using MS Office and digital tools. Highly organized, detail-oriented, and motivated to contribute effectively in a professional organization.";
 
-  doc.setFont("helvetica", "normal");
-  doc.setFontSize(12);
-  const aboutMe =
-    "A dedicated and goal-oriented Information Technology graduate with strong computer and IT skills and effective communication abilities. Possesses hands-on experience in lead generation, online research, and accurate data handling using MS Office and digital tools.\n\nHighly organized, detail-oriented, and motivated to work in a well-reputed organization where skills can be utilized efficiently, professional growth can be achieved, and meaningful contributions can be made toward organizational success.";
-  const aboutLines = doc.splitTextToSize(aboutMe, 170);
-  aboutLines.forEach(line => {
-    if (y > 280) { doc.addPage(); y = 20; }
+  doc.splitTextToSize(summary, pageWidth - 40).forEach(line => {
     doc.text(line, 20, y);
     y += 6;
   });
+
   y += 6;
 
   /* ===== SKILLS ===== */
-  if (y > 260) { doc.addPage(); y = 20; }
-  doc.setFont("helvetica", "bold");
-  doc.setFontSize(14);
-  doc.text("Skills", 20, y);
-  y += 8;
-
-  doc.setFontSize(12);
+  sectionTitle("Skills");
 
   doc.setFont("helvetica", "bold");
   doc.text("Computer & IT Skills", 20, y);
   y += 6;
 
   doc.setFont("helvetica", "normal");
-  const computerSkills = [
-    "• MS Word (Document Formatting & Typing)",
-    "• MS Excel (Data Entry, Basic Formulas)",
-    "• MS PowerPoint (Presentations)",
-    "• AI-Assisted Productivity Tools",
+  [
+    "• MS Word, Excel & PowerPoint",
+    "• Data Entry & Digital Record Keeping",
     "• Internet & Email Handling",
-    "• Digital Record Keeping",
+    "• AI-Assisted Productivity Tools",
     "• Basic IT Troubleshooting"
-  ];
-  computerSkills.forEach(item => {
-    doc.text(item, 25, y);
-    y += 6;
+  ].forEach(s => {
+    doc.text(s, 25, y);
+    y += 5;
   });
 
   y += 4;
-
   doc.setFont("helvetica", "bold");
   doc.text("Communication & Soft Skills", 20, y);
   y += 6;
 
   doc.setFont("helvetica", "normal");
-  const softSkills = [
-    "• Clear Verbal & Written Communication",
-    "• Professional Email Writing",
-    "• Teamwork & Coordination",
-    "• Time Management",
+  [
+    "• Clear Communication & Email Writing",
+    "• Time Management & Teamwork",
     "• Problem Solving",
-    "• Adaptability & Willingness to Learn",
-    "• Attention to Detail"
-  ];
-  softSkills.forEach(item => {
-    doc.text(item, 25, y);
-    y += 6;
+    "• Adaptability & Attention to Detail"
+  ].forEach(s => {
+    doc.text(s, 25, y);
+    y += 5;
   });
 
   y += 6;
 
   /* ===== EXPERIENCE ===== */
-  if (y > 260) { doc.addPage(); y = 20; }
-  doc.setFont("helvetica", "bold");
-  doc.setFontSize(14);
-  doc.text("Experience", 20, y);
-  y += 8;
-
-  doc.setFontSize(12);
+  sectionTitle("Experience");
 
   doc.setFont("helvetica", "bold");
   doc.text("STI Teacher (EST – Computer Science)", 20, y);
-  y += 6;
+  y += 5;
   doc.setFont("helvetica", "normal");
-  doc.text("GGES, Jalal Abad, Lodhran | Punjab Govt Internship Program,March 2025 – Present" , 25, y);
-y += 8;
+  doc.text(
+    "GGES Jalal Abad, Lodhran | Punjab Govt Internship Program | Mar 2025 – Present",
+    25,
+    y
+  );
+  y += 7;
+
   doc.setFont("helvetica", "bold");
   doc.text("Secondary School Teacher (Mathematics)", 20, y);
-  y += 6;
+  y += 5;
   doc.setFont("helvetica", "normal");
   doc.text("Govt. Girls High School, Lodhran | Aug 2023 – Nov 2024", 25, y);
-  y += 8;
+  y += 7;
 
   doc.setFont("helvetica", "bold");
   doc.text("Lead Generation & Data Entry Executive", 20, y);
-  y += 6;
+  y += 5;
   doc.setFont("helvetica", "normal");
-  doc.text("Lead Surface, Lodhran | 2022 – 2024 | Online lead research and record management", 25, y);
-  y += 6;
-
-  /* ===== CERTIFICATIONS ===== */
-  if (y > 260) { doc.addPage(); y = 20; }
-  doc.setFont("helvetica", "bold");
-  doc.setFontSize(14);
-  doc.text("Certifications", 20, y);
-  y += 8;
-
-  doc.setFont("helvetica", "normal");
-  const achievements = [
-    "• Artificial Intelligence for IT & Non-IT Professionals | Virtual University",
-    "• Freelancing | DigiSkills.pk",
-    "• Digital Marketing | DigiSkills.pk",
-    "• Fundamentals of Digital Marketing | Google Digital Unlocked",
-    "• Introduction to Cybersecurity | Cisco Networking Academy",
-    "• Introduction to Packet Tracer | Cisco Networking Academy"
-  ];
-  achievements.forEach(item => {
-    doc.text(item, 25, y);
-    y += 6;
-  });
-
+  doc.text("Lead Surface, Lodhran | 2022 – 2024", 25, y);
   y += 6;
 
   /* ===== EDUCATION ===== */
-  if (y > 260) { doc.addPage(); y = 20; }
-  doc.setFont("helvetica", "bold");
-  doc.setFontSize(14);
-  doc.text("Education", 20, y);
-  y += 8;
+  sectionTitle("Education");
 
   doc.setFont("helvetica", "bold");
-  doc.text("Bachelor of Science in Information Technology (BSIT)", 20, y);
-  y += 6;
+  doc.text("BS Information Technology", 20, y);
+  y += 5;
   doc.setFont("helvetica", "normal");
   doc.text("BZU Multan | 2019 – 2023 | CGPA: 3.57 / 4.00", 25, y);
-  y += 8;
+  y += 6;
 
   doc.setFont("helvetica", "bold");
   doc.text("Intermediate (Pre-Engineering)", 20, y);
-  y += 6;
+  y += 5;
   doc.setFont("helvetica", "normal");
-  doc.text("Pins College Lodhran | 2017 – 2019 | Marks: 819 / 1100", 25, y);
-  y += 8;
-
-  doc.setFont("helvetica", "bold");
-  doc.text("Matriculation (Science)", 20, y);
-  y += 6;
-  doc.setFont("helvetica", "normal");
-  doc.text("Pins School Lodhran | 2015 – 2017 | Marks: 924 / 1100", 25, y);
+  doc.text("Pins College Lodhran | 2017 – 2019", 25, y);
   y += 6;
 
   /* ===== CONTACT ===== */
-  if (y > 260) { doc.addPage(); y = 20; }
-  doc.setFont("helvetica", "bold");
-  doc.setFontSize(14);
-  doc.text("Contact", 20, y);
-  y += 8;
+  sectionTitle("Contact");
 
   doc.setFont("helvetica", "normal");
-  doc.setFontSize(12);
-  const contact = [
-    "Phone: 0316-7457018",
-    "Email: eshaishfaq01@gmail.com",
-    "LinkedIn: www.linkedin.com/in/esha-rana-045a91324"
-  ];
-  contact.forEach(item => {
-    doc.text(item, 25, y);
+  [
+    "📞 0316-7457018",
+    "✉️ eshaishfaq01@gmail.com",
+    "🔗 linkedin.com/in/esha-rana-045a91324"
+  ].forEach(c => {
+    doc.text(c, 25, y);
     y += 6;
   });
 
   /* ===== SAVE ===== */
-  doc.save("Esha_Ishfaq_CV.pdf");
+  doc.save("Esha_Ishfaq_Professional_CV.pdf");
 }
 </script>
  
@@ -237,6 +201,7 @@ y += 8;
 
 </body>
 </html>
+
 
 
 
